@@ -1,6 +1,13 @@
 2009-01-31  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	Vitali Perchonok is com gmail from vitali.pe
+	Fixed crash bug when board finished.
+
+	* src/boards/python/redraw.py:
+
+2009-01-31  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	Vitali Perchonok is com gmail from vitali.pe
 	Fixed crash bug when changing level while dragging an item  (2 click drag mode)
 
 	* src/boards/shapegame.c: (shapegame_next_level):
